<resources>
    <string name="app_name">KINDLE</string>

    <string name="home">Beranda</string>
    <string name="homecaps">BERANDA</string>
    <string name="calendar">Acara</string>
    <string name="calendarcaps">ACARA</string>
    <string name="feeds">Status</string>
    <string name="feedscaps">STATUS</string>
    <string name="messages">Pesan</string>
    <string name="messagescaps">PESAN</string>
    <string name="profile">Profil</string>
    <string name="profilecaps">PROFIL</string>
    <string name="editprofil">EDIT PROFIL</string>
    <string name="tetangga">LIST TETANGGA</string>
    <string name="det_tetangga">DETAIL TETANGGA</string>
    <string name="add_event">TAMBAHKAN ACARA</string>


    <string name="log_but">Masuk</string>

    <string name="sig_intro">Buat akun untuk mulai bersosial</string>

    <string name="sig_but">Daftar</string>

    <string name="hint_login">Username/Email</string>
    <string name="hint_mail">Email</string>
    <string name="hint_pass">Password</string>
    <string name="hint_name">Nama</string>
    <string name="hint_username">Username</string>
    <string name="hint_tempatlahir">Tempat Lahir</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_desa">Desa</string>
    <string name="hint_kecamatan">Kecamatan</string>
    <string name="hint_kabupaten">Kabupaten/Kota</string>
    <string name="hint_pekerjaan">Pekerjaan</string>
    <string name="hint_phone">Telepon</string>
    <string name="hint_RT">RT</string>
    <string name="hint_RW">RW</string>
    <string name="hint_lama">Password Lama</string>
    <string name="hint_baru">Password Baru</string>
    <string name="hint_baru2">Ulang Password Baru</string>
    <string name="hint_TTL">TTL</string>
    <string name="hintrtrw">RT/RW</string>

    <!-- String di Events Activity -->
    <string name="locPick">Tentukan Lokasinya!</string>


    <string name="tx_gantipass">Isi kedua form dibawah untuk ganti password, atau kosongkan saja bila tidak ingin mengganti password</string>


    <string name="signmess">Sudah punya akun?</string>
    <string name="link_tosign"> daftar sekarang</string>
    <string name="logmess">Belum punya akun?</string>
    <string name="link_tologin">masuk sekarang</string>

    <string name="tagline">Login untuk berkomunikasi</string>
    <string name="search">Search</string>

    <string name="loading">Loading .....</string>

    <string name="def_name">Person Name</string>
    <string name="def_chat">Hey fellas, it is....</string>
    <string name="def_hour">00.00</string>
    <string name="moments">some moments ago</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="tempat">Tempat :</string>
    <string name="waktu">Waktu :</string>
    <string name="Penyelenggara">Penyelenggara :</string>

    <string name="tgl_def">11</string>
    <string name="month_def">Nov</string>
    <string name="event">Free Discount</string>
    <string name="urgensi">Penting</string>
    <string name="tempat_def">Bandung</string>
    <string name="waktu_def">15.30–16.00</string>
    <string name="Penyelenggara_def">Pak RT</string>

    <string name="add_stat">Ada Apa Hari ini?</string>
    <string name="save">Simpan</string>

    <string name="hint_judul">Judul</string>
    <string name="hint_desk">Deskripsi</string>
    <string name="hint_waktu">HH:MM</string>
    <string name="hint_date">DD/MM/YYYY</string>
    <string name="hint_urgensi">Urgensi</string>

    <string name="sample_name">(Sample Name)</string>
    <string name="sample2">(belum diupdate) | X Thn</string>
    <string name="sample3">(belum diupdate)</string>
    <string name="sample4">Username : (belum diupdate)</string>
    <string name="name_fill">%1$s | %2$s</string>
    <string name="user_fill">Username : %1$s</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="rtrw">%1$s/%2$s</string>
    <string name="formatTTL">%1$s,%2$s</string>
    <string name="sample_phone">123456</string>


    <string name="ketua">Ketua RT</string>
    <string name="alamat">JL yang pernah hilang</string>
    <string name="kontak">Kontak :</string>
    <string name="def_kontak">123456789</string>
    <string name="detail_but">Selengkapnya</string>

    <string name="separate">:</string>

    <string name="but_op1">Kirim Pesan</string>
    <string name="but_op2">Telepon</string>

    <string name="alert">Umumkan Kejadian Mendesak</string>
    <string name="pesan">Pesan</string>
    <string name="dg1">Biasa</string>
    <string name="dg2">Penting</string>
    <string name="dg3">Darurat</string>
    <string name="pesan_hint">Tulis Pesan Anda</string>
    <string name="status_new">Buat Status Baru</string>
    <string name="status_hint">Apa yang ada dipikiranmu?</string>

    <!-- INTRO SLIDER STRING -->
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MASUK</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">Aplikasi untuk membantu komunikasi antar warga dalam satu RW</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Disertai dengan fitur utama yaitu peta, jadwal acara, status dan pesan secara personal</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Fitur panic button yang siap untuk memberitahu warga sekitar dengan cepat.</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Kindle adalah sebuah solusi aplikasi all in one untuk kebutuhan bersosial</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="verifikasi">Menunggu verifikasi dari RW / RT..</string>
    <string name="verifikasi2">Akun anda masih dalam tahap verifikasi dan belum dapat digunakan. Kontak ketua RW atau ketua RT anda untuk memverifikasi akun anda.</string>
</resources>
