<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/action_feeds"
        android:icon="@drawable/clock"
        android:title="@string/feeds"/>
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/chat"
        android:title="@string/messages"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"/>

</menu>