<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:checked="false"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feeds"
        android:checked="false"
        android:icon="@drawable/clock"
        android:title="@string/feeds"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messages"
        android:checked="false"
        android:icon="@drawable/chat"
        android:title="@string/messages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:checked="false"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>