<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/eventContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/capsule_edittext"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvTgl"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tgl_def"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/round_bg_event"
        android:fontFamily="@font/proxima_nova_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUrgent" />

    <TextView
        android:id="@+id/tvBln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="24dp"
        android:text="@string/month_def"
        android:textSize="16sp"
        android:fontFamily="@font/proxima_nova_medium"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTgl" />

    <TextView
        android:id="@+id/tvEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:text="@string/event"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#060606"
        android:fontFamily="@font/proxima_nova_medium"
        app:layout_constraintStart_toEndOf="@+id/tvTgl"
        app:layout_constraintTop_toBottomOf="@+id/tvUrgent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="3dp"
        android:text="@string/waktu"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvTgl"
        app:layout_constraintTop_toBottomOf="@+id/tvTempat" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="13dp"
        android:text="@string/Penyelenggara"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTgl"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/tvTempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tempat_def"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvEvent" />

    <TextView
        android:id="@+id/etWaktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/waktu_def"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/tvTempat" />

    <TextView
        android:id="@+id/tvPenyelenggara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Penyelenggara_def"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/etWaktu" />

    <TextView
        android:id="@+id/tvUrgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/urgensi"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Tempat :"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvTgl"
        app:layout_constraintTop_toBottomOf="@+id/tvEvent" />
</android.support.constraint.ConstraintLayout>