<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="30sp"
        android:maxHeight="30sp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/clear"
        android:layout_alignParentEnd="true"
        android:background="@null" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/tvTNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/def_name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btTDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvTtelepon"
        android:layout_below="@+id/tvTtelepon"
        android:layout_marginTop="15dp"
        android:text="@string/but_op1" />

    <Button
        android:id="@+id/btTChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTDetail"
        android:layout_alignBottom="@+id/btTDetail"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/btTDetail"
        android:text="@string/but_op2" />

    <TextView
        android:id="@+id/tvTtelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="12dp"
        android:text="@string/sample_phone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btTTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTChat"
        android:layout_alignBottom="@+id/btTChat"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/btTChat"
        android:text="@string/but_op3" />

</RelativeLayout>